🐛 Fix fly-in overflow scroll

--- a/playground/src/fly-in/fly-in.scss
+++ b/playground/src/fly-in/fly-in.scss
@@ -7,6 +7,8 @@
   position: absolute;
   z-index: 10000;
   top: 0;
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   min-width: 240px;
@@ -60,7 +62,8 @@
 
   &-content {
     height: 100%;
-    padding: 25px;
+    margin-top: 25px;
+    padding: 0 25px;
     overflow: scroll;
 
     &.loading {
